# SafeC

./: .gitignore  LICENSE  README.md
.github/workflows/: safec-tests.yml  safec.yml
cmake/: CompilerOptions.cmake
src/: .clang-format  CMakeLists.txt  main.cpp
src/cmake/: CompilerOptions.cmake  Deps.cmake  ParserGenerate.cmake
src/config/: CMakeLists.txt  Config.hpp  ConfigLex.cpp  ConfigLex.hpp
src/generator/: CMakeLists.txt  Generator.cpp  Generator.hpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/parser/: Badge.hpp  CMakeLists.txt  ModPoint.hpp  Parser.cpp  Parser.hpp  ParserFactory.hpp  SemNode.cpp  SemNode.hpp  SemNodeEnumeration.hpp  SemNodeWalker.cpp  SemNodeWalker.hpp  Semantics.cpp  Semantics.hpp  c89.lex  c89.yacc
src/parser/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/parser/parser_generator/: CMakeLists.txt  c89.lex  c89.yacc  c89.ypp  parser_functions.c
src/parser/semantics/: CMakeLists.txt  SemNode.cpp  SemNode.hpp  SemNodeEnumeration.hpp  Semantics.cpp  Semantics.hpp  SemanticsFactory.hpp  SemanticsState.hpp  SyntaxChunkTypes.hpp
src/parser/semantics/walkers/: CMakeLists.txt  SemNodeWalker.cpp  WalkerDefer.cpp  WalkerDefer.hpp  WalkerDetectWhitespacePattern.hpp  WalkerPrint.cpp  WalkerPrint.hpp  WalkerReference.cpp  WalkerReference.hpp  WalkerSourceAstIntegrity.cpp  WalkerSourceAstIntegrity.hpp  WalkerSourceCoverage.cpp  WalkerSourceCoverage.hpp  WalkerStrategy.hpp
src/parser/walkers/: SemNodeWalker.cpp  WalkerPrint.cpp  WalkerPrint.hpp  WalkerStrategy.hpp
src/safec_testfiles/: AST_defer.sc  AST_functions.sc  AST_looping.sc  AST_pointers_arrays.sc  AST_scopes.sc  AST_switchcase.sc  AST_var_declarations.sc  RUN_TEST_all.sh  RUN_TEST_ast_generation.sh  RUN_TEST_defer_modified_ast.sh  RUN_TEST_source_coverage.sh  ctree_test_file.sc  defer.sc  references.sc  valid_c.sc
src/safec_testfiles/testfiles_generated_asts/: AST_defer.sc.AST  AST_functions.sc.AST  AST_looping.sc.AST  AST_pointers_arrays.sc.AST  AST_scopes.sc.AST  AST_switchcase.sc.AST  AST_var_declarations.sc.AST
src/safec_testfiles/testfiles_generated_coverage/: AST_defer.sc.COV  AST_functions.sc.COV  AST_looping.sc.COV  AST_pointers_arrays.sc.COV  AST_scopes.sc.COV  AST_switchcase.sc.COV  AST_var_declarations.sc.COV
src/safec_testfiles/testfiles_generated_defer_ast/: AST_defer.c  AST_defer.sc.AST
src/semantic_nodes/: CMakeLists.txt  SemNode.cpp  SemNode.hpp  SemNodeEnumeration.hpp
src/semantics/: CMakeLists.txt  Semantics.cpp  Semantics.hpp  SemanticsState.hpp  SyntaxChunkTypes.hpp
src/utils/: CMakeLists.txt  Utils.hpp
src/walkers/: CMakeLists.txt  SemNodeWalker.cpp  SemNodeWalker.hpp  WalkerDeferExecute.cpp  WalkerDeferExecute.hpp  WalkerFindById.cpp  WalkerFindById.hpp  WalkerPrint.cpp  WalkerPrint.hpp  WalkerSourceCoverage.cpp  WalkerSourceCoverage.hpp  WalkerSourceGen.cpp  WalkerSourceGen.hpp  WalkerStrategy.hpp
tests/: defer.sc  valid_c.sc
